--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: '/PanelCV' #change it according to your repository name
 
 # Profile information
 yourname: Naveen Kambham    
-title: 'MACHINE LEARNING ENGINEER'  ## your title
+title: 'Machine Learning Developer'  ## your title
 location: Saskatoon , SK
 
 
